mejoramiento el las dimensiones

--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 
 
 <div class="container">
+    <div class="">
+        <!-- <img src="logo.png"> -->
+    </div>
     <div class="card-container">
-        <div class="hearder">
-            <h1>Reservacion de citas</h1>
+        <div class="card-header">
+            <span>Reservacion de citas</span>
         </div>
         <div class="card-body">
-            Yur Adan Valdez Carazas, usted reservo una cita para el dia 5 de noviembre del 2020 
-            con el Dr. xxxx con la especialidad pediatra.
+            <div class="card-message">
+                <span>
+                    GUINANDLOPEZ DE ROMAÑA DE MONTOYASILVIA MARIA DEL ROSARIO CONSUELO, usted reservo una cita para el dia 5 de noviembre del 2020 a las 8:30 am
+                    con el Dr. PUENTE ARNAO TIRAVANTI JAVIER ANDRES de la especialidad pediatra.
+                </span>
+            </div>
         </div>
-        <div class="card-footer">
+        <!-- <div class="card-footer">
             Clinica santa isabel
-        </div>
+        </div> -->
     </div>
     
 </div>
